--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,41 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="header"></div>
+  <figure class="phones_img"><img src="images/phones.png" alt"phones"></figure>
+  <div class="brand_container">
+  <figure class="brand_img"><img src="images/brand.png" alt="Instagram"></figure>
+  <button type="button" class="login_button"><img src="images/home.png" alt-="Log In">Log In</button>
+  </div>
+  <div class="info_container">
+  <img src="images/frame.png" class="frame">
+    <div class="content">
+    <h1>Capture and Share <br> the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+  <p>Oh yeah, did we mention it's free?</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <img src="images/badge-iphone.png" alt="Download on the App Store">
+  <img src="images/badge-android.png" alt="Get it on Google Play">
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
+</div></div>
+<footer class="footer">
+<nav>
+  <a href="#">About Us</a>
+  <a href="#">Support</a>
+  <a href="#">Blog</a>
+  <a href="#">Press</a>
+  <a href="#">API</a>
+  <a href="#">Jobs</a>
+  <a href="#">Privacy</a>
+  <a href="#">Terms</a>
   &copy; 2014 Instagram
+</nav>
+</footer>
 </body>
 </html>
