--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class='backBlue'></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<img id='phones' src='images/phones.png'>
 
-  Oh yeah, did we mention it's free?
+<img id='brand' src='images/brand.png'>
 
-  Download on the App Store
-  Get it on Google Play
+<div id='log-in'>
+  <img src='images/home.png'>
+  <h4> Log in</h4>
+</div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+<div id='frame'>
+  <img src='images/frame.png'>
+  <div id='text-block'>
+      <h3>Capture and Share</h3>
+      <h3>the World's Moments</h3>
+      <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+  </div>
+  <div id='badges'>
+    <img src='images/badge-iphone.png'>
+    <img src='images/badge-android.png'>
+  </div>
+</div>
 
-  &copy; 2014 Instagram
+
+
+<footer>
+  <p>About Us</p>
+  <p>Support</p>
+  <p>Blog</p>
+  <p>Press</p>
+  <p>API</p>
+  <p>Jobs</p>
+  <p>Privacy</p>
+  <p>Terms</p>
+  <p id='copyright'>&copy; 2014 Instagram</p>
+</footer>
+
+</section>
+
 </body>
 </html>
