--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,44 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="colorone"></div>
+  <div class="colortwo"></div>
+  <div class="content">
+  <img src="./images/phones.png" class="phone">
+  <img src="./images/brand.png" class="brand">
+    <div class="loginbtn">
+      <img src="./images/home.png" class="home">
+      <span class="logincolor"><strong>Log in</strong></span>
+    </div>
+  <div class="text-background">
+  <img src="./images/frame.png" class="frame">
+  <div class="text">
+  <div class="title"><h1>Capture and Share</br> the World's Moments<h1></div>
 
-  Capture and Share the World's Moments
+  <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</P>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+ <img src="./images/badge-iphone.png" class="badge1">
+ <img src="./images/badge-android.png" class="badge2">
+</div>
+</div>
+ <div class="links">
+  <b>About Us</b>
+  <b>Support</b>
+  <b>Blog</b>
+  <b>Press</b>
+  <b>API</b>
+  <b>Jobs</b>
+  <b>Privacy</b>
+  <b>Terms</b>
+  <span>&copy; 2014 Instagram</span>
+</div>
+</div>
 </body>
 </html>
