--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <title>Instagram</title>
+  </head>
+  <body>
+    <div class="backgroundColor1"></div>
+    <div class="backgroundColor2"></div>
+    <div class="content">
+      <div class="phone">
+        <img src="images/phones.png" id="phoneSize">
+      </div>
+      <div class="rightContent">
+        <div class="brand">
+          <img src="images/brand.png" id="brandSize">
+          <div class="logIn">
+            <img src="images/home.png" id="homeSize">
+            <div id="logInText">
+              Log In
+            </div>
+          </div>
+        </div>
+        <div class="textBox">
+          <div class="title">
+            Capture and Share <br>the World's Moments
+          </div>
+          <div>
+            <p> Instagram is a fast, beautiful and fun way
+              to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to
+              transform its look and feel, then post to
+              Instagram &mdash; it's that easy.
+              You can even share to Facebook, Twitter,
+              Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+          <img src="images/badge-iphone.png" class="download">
+          <img src="images/badge-android.png" class="download">
+        </div>
+      </div>
+    </div>
+    <footer>
+      <p class="footer">About Us</p>
+      <p class="footer">Support</p>
+      <p class="footer">Blog</p>
+      <p class="footer">Press</p>
+      <p class="footer">API</p>
+      <p class="footer">Jobs</p>
+      <p class="footer">Privacy</p>
+      <p class="footer">Terms</p>
+      <p class="footer" id="copyRight">&copy; 2014 Instagram</p>
+    </footer>
+  </body>
 </html>
