--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,9 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Instagram</title>
+
 </head>
 <body>
+
+<div id="container">
+
+  <div class="top"></div>
+
+    <div class="content-wrapper">
+
+<!--PHONE IMAGE, MAIN LOGO, LOGIN -->
+
+          <div class="phone-image">  <img src="images/phones.png">  </div>
+          <div id="instagram-icon"> <img src="images/brand.png"> </div>
+          <div id="login-icon">
+              <div id="home-image"><img src="images/home.png" alt="Login">
+              </div>
+
+              <div id="login-text">
+                <p>Log in</p>
+              </div>
+
+          </div>
+
+
+<!--FRAMED MAIN CONTENT -->
+
+          <div id="framed-content">
+              <div id="frame-image"> <img src="images/frame.png"></div>
+
+              <div id="main-text">
+              <h2 style="color: #06365f">   Capture and Share <br> the World's Moments</h2>
+              <p> Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+              <br>
+              <br>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              <br>
+              <br>
+              Oh yeah, did we mention it's free?</p>
+
+              </div>
+
+              <div id="apple-android">
+                <div id="app-store-icon"> <img src="images/badge-iphone.png" alt="Apple App Store"></div>
+                <div id="google-play-icon"> <img src="images/badge-android.png" alt="Google Play"></div>
+              </div>
+
+          </div>
+
+  <!--BOTTOM NAV-->
+
+          <div id="nav-bar">
+                <p style="color: #1c5380; font-weight: bold; font-size: 15px"> ABOUT US   SUPPORT    BLOG   PRESS   API   JOBS   PRIVACY   TERMS   &copy; 2014 Instagram </p>
+          </div>
+
+
+    </div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+  <!--
   Instagram
 
   Capture and Share the World's Moments
@@ -26,6 +97,6 @@
   Privacy
   Terms
 
-  &copy; 2014 Instagram
+   -->
 </body>
 </html>
