--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,22 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link type= text/css rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class= "bluebox">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="login"> <strong>Log in</strong>
+    <img src="images/home.png">
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="phones">
+    <img src="images/phones.png">
+  </div>
 
-  Oh yeah, did we mention it's free?
+  <div class="logo">
+    <img src="images/brand.png">
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
+</div>
 
+<div class="frame">
+    <img src="images/frame.png">
+    <div class= "content">
+
+      <h4> Capture and Share <br> the World's Moments </h4>
+
+      Instagram is a <strong> fast </strong>, <strong> beautiful </strong> and <strong> fun </strong> way to share your life with friends and family.
+
+      <br>
+      <br>
+
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+
+      <br>
+      <br>
+
+      Oh yeah, did we mention it's free?
+    </div>
+
+
+  <div class="downloadiphone">
+    <img src="images/badge-iphone.png">
+  </div>
+
+  <div class="downloadandroid">
+    <img src="images/badge-android.png">
+  </div>
+</div>
+
+<div class="footer">
   About Us
   Support
   Blog
@@ -25,7 +63,8 @@
   Jobs
   Privacy
   Terms
+ <span> &copy; 2014 Instagram </span>
+</div>
 
-  &copy; 2014 Instagram
 </body>
 </html>
