--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="container-blue"></div>
+  <div class="container-white"></div>
+  <div class="container">
+    <div class="phones">
+      <img src="images/phones.png" alt="Phones">
+    </div>
 
-  Capture and Share the World's Moments
+    <div class="content">
+      <div class="header">
+        <img src="images/brand.png" alt="Instagram">
+        <div class="login">
+          <img src="images/home.png" alt=""> Log in
+        </div>
+      </div>
+      <div class="text">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <h2>Capture and Share<br>the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+        <p>Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <div class="download">
+          <img class="margin-image" src="images/badge-iphone.png" alt="Appstore"> 
+          <img src="images/badge-android.png" alt="Android">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer">
 
-  &copy; 2014 Instagram
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+
+      <li><span class="copyright">&copy; 2014 Instagram</span></li>
+    </ul>
+  </div>
+
 </body>
 </html>
