--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
+
 </head>
 <body>
-  Instagram
+  <div class="banner--blue"></div>
+    <div class="content__wrapper">
+      <div class="content__inside">
+        <div class="column--left">
+          <img src="images/phones.png"/>
+        </div>
+        <div class="column--right">
+          <div class="column--right__header">
+            <img src="images/brand.png">
+            <div class="button--log-in">
+              <img src="images/home.png">
+              <h5>Log In</h5>
+            </div>
+          </div>
+          <div>
+            <div class="text-section__background">
+              <div class="text-section__text">
+              <h2>Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
+              <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+              <p>Oh yeah, did we mention it's free?</p>
+              </div>
+            </div>
+            <img src="images/badge-iphone.png"/>
+            <img src="images/badge-android.png"/>
+          </div>
+      </div>
+    </div>
+    <div class="footer__nav">
+      <a class="footer__link">About Us</a>
+      <a class="footer__link">Support</a>
+      <a class="footer__link">Blog</a>
+      <a class="footer__link">Press</a>
+      <a class="footer__link">API</a>
+      <a class="footer__link">Jobs</a>
+      <a class="footer__link">Privacy</a>
+      <a class="footer__link">Terms</a>
+      <a class="footer__copyright">&copy; 2014 Instagram</a>
+    </div>
+  </div>
 </body>
 </html>
