--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,44 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="container">
+  <div class="top">
+    <img id="iphone" src="images/phones.png">
+    <img id="instagram" src="images/brand.png">
+  <div id="home">
+    <button name="hom"><img id="home1" src="images/home.png"><span>Log in</span></button>
+  </div>
+<div class="frame1">
+  <img id="frame" src="images/frame.png">
+  <h1>Capture and Share the World's Moments</h1>
+  <p id="p1">
+    Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+    Take a picture or video, choose a filter to transform its look and feel,
+    then post to Instagram &mdash; it's that easy. You can even share to Facebook,
+    Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+    Oh yeah, did we mention it's free?</p>
+  <div class="badges">
+  <img id="badgei" src="images/badge-iphone.png">
+  <img id="badgea" src="images/badge-android.png">
+</div>
+</div>
+  </div>
+  <div class="bottom">
+    <ul class="buttons">
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li id="insta">&copy; 2014 Instagram</li>
+    </ul>
+  </div>
+</div>
 </body>
 </html>
