--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,55 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="/Users/tahirafarid/Codecamp/WK1/Day1/Day2/lab-css-instagram-clone/starter-code/css/main.css">
 </head>
 <body>
-  Instagram
+<div class="heading">
+</div>
+<div class="blueContainer">
+  <img class="phones" src="/Users/tahirafarid/Codecamp/WK1/Day1/Day2/lab-css-instagram-clone/starter-code/images/phones.png" width="318" height="512">
+  </img>
+  <div class="insta">
+    <figure class="grammy">
+      <img src="/Users/tahirafarid/Codecamp/WK1/Day1/Day2/lab-css-instagram-clone/starter-code/images/brand.png" width="314" height="78">
+        </img>
+      </figure>
+    <button>
+      <img class="home" src="/Users/tahirafarid/Codecamp/WK1/Day1/Day2/lab-css-instagram-clone/starter-code/images/home.png" width="25" height="22">
+    </img>
+    Log in</button>
+  </div>
+</div>
 
-  Capture and Share the World's Moments
+<div class="whiteBox">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="content">
+    <h2>Capture and Share <br/> the World's Moments</h2>
+    <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
+    </p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <br/ >
+    Oh yeah, did we mention it's free?
+  </p>
+  <figure class="links">
+    <img src="/Users/tahirafarid/Codecamp/WK1/Day1/Day2/lab-css-instagram-clone/starter-code/images/badge-android.png" width="153" height="51"></img>
+    <img src="/Users/tahirafarid/Codecamp/WK1/Day1/Day2/lab-css-instagram-clone/starter-code/images/badge-iphone.png" width="164" height="51"></img>
+  </figure>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
+  </div>
+  <nav id="bottomnav">
+    <a>About Us </a>
+  <a>Support</a>
+  <a>Blog</a
+  <a>Press</a>
+  <a>API</a>
+  <a>Jobs</a>
+  <a>Privacy</a>
+  <a>Terms</a>
+</nav>
+<footer>
   &copy; 2014 Instagram
+</footer>
+</div>
 </body>
 </html>
