--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+    <div class="content">
+      <input type="button" class="botonimagen" value="Log In" src="../images/home.png"/>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+     <img src="./images/brand.png" class="brand">
+    <div>  <img src="./images/phones.png" class="phones"/> </div>
+    <div>  <img src="./images/frame.png" class="frame"/> </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+<div class="parag">
+      <h4>Capture and Share the World's Moments</h4>
 
-  Download on the App Store
-  Get it on Google Play
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  &copy; 2014 Instagram
+      <p>Oh yeah, did we mention it's free?</p>
+      <div><img src="./images/badge-iphone.png" alt="  Download on the App Store"/><img src="./images/badge-android.png" class="images" alt="Get it on Google Play"/></div>
+
+<div class="footer">
+      About Us
+      Support
+      Blog
+      Press
+      API
+      Jobs
+      Privacy
+      Terms
+
+      &copy; 2014 Instagram
+    </div>
+</div>
+</div>
 </body>
 </html>
