--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -20,7 +20,7 @@
         <div id="cuadrito">
               <img src="./images/home.png">
 
-              Log In
+              <p>Log In</p>
         </div>
 </div>
 
@@ -28,12 +28,15 @@
 <div class="scuare-text">
   <h2>Capture and Share the World's Moments</h2>
 
-  Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+  Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong>
+  way to share your life with friends and family.<br><br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+   it's that easy. You can even share to Facebook, Twitter, Tumblr and more.
+    It's a new way to see the world.<br><br>
 
   Oh yeah, did we mention it's free?
-  <br>
+  <br><br><br>
     <img src="./images/badge-iphone.png">
     <img src="./images/badge-android.png">
   </div>
@@ -41,13 +44,13 @@
 <div class="container">
 
       <nav id="topnav">
-        <a href="index.html">About Us</a> |
-        <a href="about.html">  Support</a> |
-        <a href="menu.html">Blog</a> |
+        <a href="index.html">About Us</a>
+        <a href="about.html">  Support</a>
+        <a href="menu.html">  Blog</a>
         <a href="contact.html">  Press</a>
         <a href="">   Jobs</a>
-        <a href=""> Privacy</a>
-        <a href=""> Terms</a>
+        <a href="">   Privacy</a>
+        <a href="">   Terms</a>
         <span>&copy; 2014 Instagram</span>
       </nav>
 
