--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,62 +9,45 @@
 </head>
 <body>
 
-<div class= "bluebox">
+  <div class="container">
+     <div class="blue-box">
+       <img id="phones" src="images/phones.png">
+       <img id="brand-logo" src="images/brand.png">
+       <div id="login">
+         <button> <img src="images/home.png"> <span>Log in</span> </button>
+       </div>
+      </div>
+    <div class="content">
+       <img id="frame" src="images/frame.png">
+       <h3>Capture and Share the World's Moments</h1>
 
-  <div class="login"> <strong>Log in</strong>
-    <img src="images/home.png">
-  </div>
+       <p>
+        Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+        Take a picture or video, choose a filter to transform its look and feel,
+        then post to Instagram &mdash; it's that easy. You can even share to Facebook,
+        Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+        Oh yeah, did we mention it's free?</p>
 
-  <div class="phones">
-    <img src="images/phones.png">
-  </div>
-
-  <div class="logo">
-    <img src="images/brand.png">
-  </div>
-
-</div>
-
-<div class="frame">
-    <img src="images/frame.png">
-    <div class= "content">
-
-      <h4> Capture and Share <br> the World's Moments </h4>
-
-      Instagram is a <strong> fast </strong>, <strong> beautiful </strong> and <strong> fun </strong> way to share your life with friends and family.
-
-      <br>
-      <br>
-
-      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-      <br>
-      <br>
-
-      Oh yeah, did we mention it's free?
+      <div class="badges">
+      <img id="badgeIphone" src="images/badge-iphone.png">
+      <img id="badgeAndroid" src="images/badge-android.png">
     </div>
 
-
-  <div class="downloadiphone">
-    <img src="images/badge-iphone.png">
   </div>
-
-  <div class="downloadandroid">
-    <img src="images/badge-android.png">
-  </div>
-</div>
-
-<div class="footer">
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
- <span> &copy; 2014 Instagram </span>
-</div>
+      <div>
+        <ul class="footer">
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li id="copyright">&copy; 2014 Instagram</li>
+        </ul>
+      </div>
+    </div>
 
 </body>
 </html>
