--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="landing-page-container">
+    <div id="background-top">
+    </div>
+    <div id="contents">
+      <img id="phones" src="images/phones.png" alt="phones">
+      <img id="brand" src="images/brand.png" alt="logo">
+      <button type="button" id="homeBtn">
+        <img id="login-img" src="images/home.png" alt="log in">
+        <span id="login-text">
+          &nbsp;Log in&nbsp;
+        </span>
+      </button>
+      <div id="frame">
+        <div id="frame-contents">
+          <p class="frame-item slogan">Capture and Share<br>the World's Moments</p>
 
-  Capture and Share the World's Moments
+          <p class="frame-item description">
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+          </p>
+          <p class="frame-item description">
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p class="frame-item description">
+            Oh yeah, did we mention it's free?
+          </p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+          <img class="frame-item iOS" src="images/badge-iphone.png" alt="Download from the App Store">
+          <img class="frame-item android" src="images/badge-android.png" alt="Download from Google Play">
+        </div>
+      </div>
+      <div id="footer">
+        <span class="link">About Us&nbsp;</span>
+        <span class="link">Support&nbsp;</span>
+        <span class="link">Blog&nbsp;</span>
+        <span class="link">Press&nbsp;</span>
+        <span class="link">API&nbsp;</span>
+        <span class="link">Jobs&nbsp;</span>
+        <span class="link">Privacy&nbsp;</span>
+        <span class="link">Terms&nbsp;</span>
+        <span class="copyright">&copy; 2014 Instagram</span>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
