--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,61 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href=“//instagramstatic-a.akamaihn.net/h1/webfonts/proximanova-bold-webfont.eot/115b1f7f9c04.eot” rel=“stylesheet”>
+  <link href="https://file.myfontastic.com/n6vo44Re5QaWo8oCKShBs7/icons.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  Instagram
+  <div class="backgroundBlue">
+    <div class="imageBrand">
+      <img src="images/brand.png" />
+    </div>
+    <div class="imagePhone" />
+      <img src="images/phones.png" />
+    </div>
+    <div class="imageLogin">
+      <img src="images/login.png" width="100"/>
+    </div>
+    <div class="imageFrame">
+      <div class="textFrame">
+        <h4>Capture and Share <br>the World's Moments</h4>
 
-  Capture and Share the World's Moments
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+      </div>
+    </div>
+    <div class="imageApple">
+      <img src="images/badge-iphone.png" />
+      <img src="images/badge-android.png" />
+    </div>
+    <div class="navBar">
+      <ul>
+        <strong>
+        <li>ABOUT US
+        <li>SUPPORT
+        <li>BLOG
+        <li>PRESS
+        <li>API
+        <li>JOBS
+        <li>PRIVACY
+        <li>TERMS
+        </strong>
+        <li>&copy; 2014 INSTAGRAM
+      </ul>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<!--
+  <div class="theAnswer">
+    <img src="https://camo.githubusercontent.com/571753eb7b390f82af59cd1367e603be5a757913/68747470733a2f2f692e696d6775722e636f6d2f445139666b31752e706e67" />
+  </div>
+-->
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
