--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,9 +1,14 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>-->
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link type="text/css" rel="stylesheet" href="css/main.css"/>
 </head>
 <body>
+  <div class ="top">
+  </div>
+  <div class ="bottom">
+  </div>
   Instagram
 
   Capture and Share the World's Moments
