--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,15 +9,21 @@
   </div>
   <div class ="bottom">
   </div>
+  <img id="phones" src="images/phones.png">
+  <div class="frame">
+    <img src="images/frame.png">
+    <p class="frame-text">
+    Capture and Share the World's Moments
+
+    Instagram is a fast, beautiful and fun way to share your life with friends and family.
+
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+
+    Oh yeah, did we mention it's free?
+    </p>
+  </div>
   Instagram
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
 
   Download on the App Store
   Get it on Google Play
