Brand image added

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,6 +9,7 @@
   </div>
   <div class ="bottom">
     <img id="phones" src="images/phones.png">
+    <img id="brand" src="images/brand.png">
   </div>
 
   <div class="frame">
