Frame contents added

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -15,13 +15,10 @@
   <div class="frame">
     <img src="images/frame.png">
     <p class="frame-text">
-    Capture and Share the World's Moments
-
-    Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-    Oh yeah, did we mention it's free?
+      <h1>Capture and Share the World's Moments</h1>
+      <p>Instagram is a <bold>fast</bold>, <bold>beautiful</bold> and <bold>fun</bold> way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
     </p>
   </div>
   Instagram
