Central container added

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -8,10 +8,12 @@
   <div class ="top">
   </div>
   <div class ="bottom">
+  </div>
+  <div class="central">
     <img id="phones" src="images/phones.png">
     <img id="brand" src="images/brand.png">
 
-  <div class="frame">
+    <div class="frame">
       <img src="images/frame.png">
       <p class="frame-text">
         <h1>Capture and Share the World's Moments</h1>
@@ -20,9 +22,7 @@
         <p>Oh yeah, did we mention it's free?</p>
       </p>
     </div>
-    
   </div>
-
 
   Instagram
 
