done git commit -mdone git commit -mdone

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div id="bg">
+  </div>
+  <div id="main">
+    <div id="main-left">
+      <img src="images/phones.png">
+    </div>
+    <div id="main-right">
+      <div id="main-top-right">
+        <img src="images/brand.png">
+        <button><img src="images/home.png"><span>Log in</span></button>
+      </div>
+      <div id="content">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>
+          Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your
+          life with friends and family.<br>
+          Take a picture or video, choose a filter to transform its
+          look and feel, then post to Instagram - it's that easy.
+          You can even share to Facebook, Twitter, Tumblr and more.
+          It's a new way to see the world.<br>
+          Oh yeah, did we mention it's free?
+        </p>
+        <img src="images/badge-iphone.png">
+        <img src="images/badge-android.png">
+      </div>
+    </div>
+  </div>
+  <footer>
+    <a href="#">ABOUT US</a>
+    <a href="#">SUPPORT</a>
+    <a href="#">BLOG</a>
+    <a href="#">PRESS</a>
+    <a href="#">API</a>
+    <a href="#">JOBS</a>
+    <a href="#">PRIVACY</a>
+    <a href="#">TERMS</a>
+    <span id="copyright">2014 INSTAGRAM</span>
+  </footer>
 </body>
 </html>
