--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,61 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="blue-background">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="container">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <div class="left-side">
+            <img class="iphone-picture" src="images/phones.png" alt="iphone">
+          </div>
 
-  Oh yeah, did we mention it's free?
+          <div class="right-side">
 
-  Download on the App Store
-  Get it on Google Play
+            <img class="instagram-logo" src="images/brand.png" alt="brand">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+              <button type="button" name="button">
+                <img class="home-picture" src="images/home.png" alt="">
+                <p>Log in</p>
+              </button>
 
-  &copy; 2014 Instagram
+          <div class="white-container">
+
+              <h2>Capture and Share the World's Moments</h2>
+
+              <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+              <br>
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              <br>
+              <p>Oh yeah, did we mention it's free?</p>
+
+            <img class="appstore" src="images/badge-iphone.png" alt="andriod-appstore">
+            <img class="playstore" src="images/badge-android.png" alt="iphone-appstore">
+
+          </div><!-- white-container -->
+
+        </div><!-- right-side -->
+
+  <div class="navbar-bot">
+
+
+      <ul class="nav-bot">
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <span>&copy; 2014 Instagram</span>
+      </ul>
+    </div>
+      </div><!-- container -->
+
+  </div>
 </body>
 </html>
