Absolute position for central container contents

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -8,8 +8,8 @@
 
   </div>
   <div class ="top">
-    <div class="central">
-      <img id="phones" src="images/phones.png">
+    <div class="central-container">
+      <img class="phones" src="images/phones.png">
       <img id="brand" src="images/brand.png">
 
       <div class="frame">
