Phone image changed from class to ID

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,7 +9,7 @@
   </div>
   <div class ="top">
     <div class="central-container">
-      <img class="phones" src="images/phones.png">
+      <img id="phones" src="images/phones.png">
       <img id="brand" src="images/brand.png">
 
       <div class="frame">
