--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -15,7 +15,7 @@
       <div class="frame">
         <img src="images/frame.png">
         <div class="frame-text">
-          <h1>Capture and Share the World's Moments</h1>
+          <h1 id="frame-header">Capture and Share the World's Moments</h1>
           <p>Instagram is a <bold>fast</bold>, <bold>beautiful</bold> and <bold>fun</bold> way to share your life with friends and family.</p>
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
           <p>Oh yeah, did we mention it's free?</p>
