Login button added

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,12 +10,18 @@
   <div class ="top">
     <div class="central-container">
       <img id="phones" src="images/phones.png">
-      <img id="brand" src="images/brand.png">
+      <div>
+        <img id="brand" src="images/brand.png">
+        <button id="login">Login
+          <img id="home-icon" src="images/home.png">
+        </button>
+
+      </div>
 
       <div class="frame">
         <img id="frame-image" src="images/frame.png">
           <h2 id="frame-header">Capture and Share the World's Moments</h2>
-          <p>Instagram is a <bold>fast</bold>, <bold>beautiful</bold> and <bold>fun</bold> way to share your life with friends and family.</p>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
           <p>Oh yeah, did we mention it's free?</p>
       </div>
