--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,13 +9,14 @@
   </div>
   <div class ="top">
     <div class="central-container">
+
       <img id="phones" src="images/phones.png">
-      <div>
+
+      <div class="brand-login">
         <img id="brand" src="images/brand.png">
         <button id="login">Login
           <img id="home-icon" src="images/home.png">
         </button>
-
       </div>
 
       <div class="frame">
@@ -25,6 +26,7 @@
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
           <p>Oh yeah, did we mention it's free?</p>
       </div>
+
   </div>
   <div class ="bottom">
   </div>
