Login button styled and positioned

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,7 +14,7 @@
 
       <div class="brand-login">
         <img id="brand" src="images/brand.png">
-        <button id="login">Login
+        <button id="login"><span id="button-text"><strong>Login</strong></span>
           <img id="home-icon" src="images/home.png">
         </button>
       </div>
