Android and Iphone badges added

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -27,6 +27,11 @@
           <p>Oh yeah, did we mention it's free?</p>
       </div>
 
+      <div class="badge-container">
+        <img id="apple-badge" src="images/badge-iphone.png">
+        <img id="android-badge" src="images/badge-android.png">
+      </div>
+
   </div>
   <div class ="bottom">
   </div>
