--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -36,7 +36,7 @@
   <div class ="bottom">
   </div>
 
-
+<div class="footer">
   Instagram
 
 
@@ -53,5 +53,6 @@
   Terms
 
   &copy; 2014 Instagram
+</div>
 </body>
 </html>
