--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -35,10 +35,9 @@
   </div>
   <div class ="bottom">
     <div class="footer">
-      Instagram
 
 
-      Download on the App Store
+      <span>Download on the App Store
       Get it on Google Play
 
       About Us
@@ -49,8 +48,9 @@
       Jobs
       Privacy
       Terms
+      </span>
 
-      &copy; 2014 Instagram
+      <span id="copyright">&copy; 2014 Instagram</span>
     </div>
   </div>
 
