--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -36,19 +36,18 @@
   <div class ="bottom">
     <div class="footer">
 
-
-      <span>Download on the App Store
-      Get it on Google Play
-
-      About Us
-      Support
-      Blog
-      Press
-      API
-      Jobs
-      Privacy
-      Terms
-      </span>
+      <ul class="footer-list">
+        <li>Download on the App Store</li>
+        <li>Get it on Google Play</li>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
 
       <span id="copyright">&copy; 2014 Instagram</span>
     </div>
