--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -37,14 +37,14 @@
     <div class="footer">
 
       <ul class="footer-list">
-        <li>About Us</li>
-        <li>Support</li>
-        <li>Blog</li>
-        <li>Press</li>
-        <li>API</li>
-        <li>Jobs</li>
-        <li>Privacy</li>
-        <li>Terms</li>
+        <li><strong>About Us  </strong></li>
+        <li><strong>Support  </strong></li>
+        <li><strong>Blog  </strong></li>
+        <li><strong>Press  </strong></li>
+        <li><strong>API  </strong></li>
+        <li><strong>Jobs  </strong></li>
+        <li><strong>Privacy  </strong></li>
+        <li><strong>Terms  </strong></li>
       </ul>
 
       <span id="copyright">&copy; 2014 Instagram</span>
