--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,55 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="left_container">
+  <img class="photo_phones" src="file:///home/kristy/prework/code/labs/lab-css-instagram-clone/starter-code/images/phones.png" />
+</div> <!--close left container-->
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div class="right_container">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <img class="photo_brand" src="file:///home/kristy/prework/code/labs/lab-css-instagram-clone/starter-code/images/brand.png" />
 
-  Oh yeah, did we mention it's free?
+  <img class="photo_home" src="file:///home/kristy/prework/code/labs/lab-css-instagram-clone/starter-code/images/home.png">Log In</img>
 
-  Download on the App Store
-  Get it on Google Play
+  <img class="photo_frame" src="file:///home/kristy/prework/code/labs/lab-css-instagram-clone/starter-code/images/frame.png" />
 
-  About Us
-  Support
-  Blog
-  Press
+  <p id="large_text"> Capture and Share
+  </br>the World's Moments</p>
+
+  <p id="small_text"> Instagram is a fast, beautiful and fun way to share your life
+  </br> with friends and family.
+</br>
+  </br> Take a picture or video, choose a filter to transform its look
+  </br> and feel, then post to Instagram &mdash; it's that easy. You can
+  </br> even share to Facebook, Twitter, Tumblr and more. It's a
+  </br>new way to see the world.
+  </br> Oh yeah, did we mention it's free? </p>
+
+  <img class="photo_badge_iphone" src="file:///home/kristy/prework/code/labs/lab-css-instagram-clone/starter-code/images/badge-iphone.png" />
+  <img class="photo_badge_android" src="file:///home/kristy/prework/code/labs/lab-css-instagram-clone/starter-code/images/badge-android.png" />
+</div>
+</div>
+
+<!-- </div> <!close bottom right container-->
+</div> <!--close right container-->
+
+<!-- <div class="bottom_container" -->
+<footer>
+  ABOUT US
+  SUPPORT
+  BLOG
+  PRESS
   API
-  Jobs
-  Privacy
-  Terms
+  JOBS
+  PRIVACY
+  TERMS
+  <span style="color: #88898c">&copy; 2014 INSTAGRAM</span>
+</footer>
+<!-- </div> -->
 
-  &copy; 2014 Instagram
 </body>
 </html>
