--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -45,9 +45,10 @@
         <li><strong>Jobs  </strong></li>
         <li><strong>Privacy  </strong></li>
         <li><strong>Terms  </strong></li>
+        <li id="copyright">&copy; 2014 Instagram</li>
       </ul>
 
-      <span id="copyright">&copy; 2014 Instagram</span>
+
     </div>
   </div>
 
