Html cleaned up

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,4 +1,6 @@
-<!--<!DOCTYPE html>-->
+<!--<!DOCTYPE html>--><s>
+  S
+</s>
 <html lang="en">
 <head>
   <title>Instagram</title>
@@ -6,25 +8,29 @@
 </head>
 <body>
 
-  </div>
-  <div class ="top">
+  <div class ="top-background">
+
     <div class="central-container">
 
-      <img id="phones" src="images/phones.png">
+      <img class="central-images" src="images/phones.png">
 
-      <div class="brand-login">
-        <img id="brand" src="images/brand.png">
-        <button id="login"><span id="button-text"><strong>Login</strong></span>
+      <div class="brand-login-container">
+
+        <img class="central-images" src="images/brand.png">
+        <button id="login-button"><span id="button-text"><strong>Login</strong></span>
           <img id="home-icon" src="images/home.png">
         </button>
+
       </div>
 
-      <div class="frame">
+      <div class="frame-container">
+
         <img id="frame-image" src="images/frame.png">
           <h2 id="frame-header">Capture and Share the World's Moments</h2>
           <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
           <p>Oh yeah, did we mention it's free?</p>
+
       </div>
 
       <div class="badge-container">
@@ -33,8 +39,12 @@
       </div>
 
   </div>
-  <div class ="bottom">
-    <div class="footer">
+
+</div>
+
+  <div class ="bottom-background">
+
+    <div class="footer-container">
 
       <ul class="footer-list">
         <li><strong>About Us  </strong></li>
@@ -48,10 +58,9 @@
         <li id="copyright">&copy; 2014 Instagram</li>
       </ul>
 
-
     </div>
-  </div>
 
+  </div>
 
 </body>
 </html>
