--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  	<meta charset="UTF-8">
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css"/>
 </head>
+
 <body>
-  Instagram
+<div class="upperbackground">
 
-  Capture and Share the World's Moments
+    <div id="phones">
+      <img src="./images/phones.png">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div id="elbrando">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <img src="./images/brand.png">
+    </div>
+        <div id="littlebox">
+              <img src="./images/home.png">
+
+              <p>Log In</p>
+        </div>
+</div>
+
+
+<div class="square-text">
+  <h2>Capture and Share the World's Moments</h2>
+
+  Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong>
+  way to share your life with friends and family.<br><br>
+
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+   it's that easy. You can even share to Facebook, Twitter, Tumblr and more.
+    It's a new way to see the world.<br><br>
 
   Oh yeah, did we mention it's free?
+  <br><br><br>
+    <img src="./images/badge-iphone.png">
+    <img src="./images/badge-android.png">
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
+<div class="container">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <nav id="topnav">
+        <a href="index.html">About Us</a>
+        <a href="about.html">  Support</a>
+        <a href="menu.html">  Blog</a>
+        <a href="contact.html">  Press</a>
+        <a href="">   Jobs</a>
+        <a href="">   Privacy</a>
+        <a href="">   Terms</a>
+        <span>&copy; 2014 Instagram</span>
+      </nav>
 
-  &copy; 2014 Instagram
+<div>
+
+
 </body>
 </html>
