--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
+  <div class="bluebox">
+
+  </div>
+
+  <figure>
+<img class="header1" src="images/brand.png">
+</figure>
+
+<figure>
+  <img class="phones" src="images/phones.png">
+</figure>
+
+<div class="homebutton">
+
+<img class="home" src="images/home.png">
+<span> home </span>
+</div>
+
+<div class="whiteb">
+  <h2>
   Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+</h2>
+  Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
   Oh yeah, did we mention it's free?
+</div>
 
-  Download on the App Store
-  Get it on Google Play
+  <div class="download">
+  <img src="images/badge-iphone.png">
+  <img src="images/badge-android.png">
+  </div>
 
+<footer>
   About Us
   Support
   Blog
@@ -25,7 +50,7 @@
   Jobs
   Privacy
   Terms
-
   &copy; 2014 Instagram
+</footer>
 </body>
 </html>
