--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,90 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css"
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class = "content-container">
+    <div class = "iphone-content-container">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    </div>
+    <div class = "instagram-information">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+      <div class = "info-header">
+        <div class = "logo-box">
 
-  Download on the App Store
-  Get it on Google Play
+        </div>
+        <div class = "login-box">
+        <button class="button">Log In</button>
+        </div>
+      </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div class = "info-body">
+        <div class = "paragraph-text-shift">
+          <h1>Capture and Share <br>the World's Moments</h1>
 
-  &copy; 2014 Instagram
+          <div class = "paragraph-text">
+
+          <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life
+            <br>with friends and family.</p>
+
+          <p>Take a picture or video, choose a filter to transform its look
+            <br>and feel, then post to Instagram &mdash; it's that easy.
+            You can <br>even share to Facebook, Twitter, Tumblr and more.
+            It's a <br>new way to see the world.</p>
+
+          Oh yeah, did we mention it's free?
+          </div>
+        </div>
+      </div>
+
+
+      <div class = "info-footer">
+        <div class = "appstore-box">
+
+        </div>
+        <div class = "andriod-market-box">
+
+        </div>
+      </div>
+
+    </div>
+    <footer> <!-- site wide footer -->
+      <nav>
+      About Us
+      Support
+      Blog
+      Press
+      API
+      Jobs
+      Privacy
+      Terms
+
+      &copy; 2014 Instagram
+    </nav>
+    </footer>
+
+
+
+  </div>
+
+
+
+
+
+
+
+
+
+  <div class = "blue-background">
+
+  </div>
+  <div class = "white-background">
+
+  </div>
+
+
 </body>
 </html>
